# datastream

./: .gitignore  CMakeLists.txt  COMMERCIAL.md  Doxyfile  LICENSE  README.md  USER_INTEGRATION_GUIDE.md
docs/: datastream-esp-idf-guide-windows.md  datastream-esp-idf-guide.md
examples/: ds_app_config_example.h  ds_app_parameter_names_example.h  ds_app_register_names_example.h
include/: datastream.h  dsCLI.h  dsParameters.h  dsRegisters.h  dsTCP.h  dsUDP.h  ds_default_config.h  ds_minimal_parameter_names.h  ds_minimal_register_names.h  ds_platforms.h  ds_system_register_names.h
src/: datastream.c  dsCLI.c  dsParameters.c  dsRegisters.c  dsTCP.c  dsUDP.c
tools/: mock_esp32_discovery.py  test_discovery.py  test_udp_receive.py
